src/app.css
@import 'tailwindcss';
@import '@skeletonlabs/skeleton';
@import '@skeletonlabs/skeleton/optional/presets';
@import '@skeletonlabs/skeleton/themes/cerberus';
/*
  Add your theme import for your theme: "cerberus" here
*/

@config '../tailwind.config.ts';

/* Apply .dark whenever the dark class is present earlier in the HTML tree */
@custom-variant dark (&:where(.dark, .dark *));

/*
  The default border color has changed to `currentColor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
	*,
	::after,
	::before,
	::backdrop,
	::file-selector-button {
		border-color: var(--color-gray-200, currentColor);
	}
  @font-face {
		font-family: 'Junicode';
		src: local('Junicode'), local('Junicode'), local('Junicode'), local('Junicode'),
			url('/fonts/Junicode.ttf');
		font-display: swap;
	}
  @font-face {
		font-family: 'Junicode-Bold';
		src: local('Junicode-Bold'), local('Junicode-Bold'), local('Junicode-Bold'), local('Junicode-Bold'),
			url('/fonts/Junicode-Bold.ttf');
		font-weight: bold;
		font-display: swap;
	}
  @font-face {
		font-family: 'Junicode-BoldItalic';
		src: local('Junicode-BoldItalic'), local('Junicode-BoldItalic'), local('Junicode-BoldItalic'), local('Junicode-BoldItalic'),
			url('/fonts/Junicode-BoldItalic.ttf');
		font-weight: bold;
    font-style: italic;
		font-display: swap;
	}
  @font-face {
		font-family: 'Junicode-Italic';
		src: local('Junicode-Italic'), local('Junicode-Italic'), local('Junicode-Italic'), local('Junicode-Italic'),
			url('/fonts/Junicode-Italic.ttf');
		font-style: italic;
		font-display: swap;
	}
}

:root {
	--aco-teal: #0f5866;
	--aco-teal-light: #468b99;
	--aco-teal-light2: #b0c9ce;
	--aco-orange: #ac6037;
	--aco-orange-light: #c1886a;
  --aco-link: #3ac6e1;
}

p {
	@apply text-lg pt-4 not-dark:text-black dark:text-white;
}
.nowrap p {
	@apply whitespace-nowrap;
}

/* Heading */
span[data-type='head_key'] {
  @apply font-bold mr-1;
}

/* Edition Text */
span[data-ids] {
  @apply cursor-pointer bg-[#ffffdd] [&.multiple-ids]:bg-[#ffff99];
}
span[data-type=mark].highlighted {
  @apply bg-[var(--aco-orange)]/40;
}

/* span[data-type=note-start]::before {
  @apply text-blue-600 in-[&.highlighted]:text-red-500 mr-[1px] ml-[3px];
  @apply content-["[●"];
}
span[data-type=note-end]::before {
  @apply text-blue-600 mr-[1px] ml-[3px];
  @apply content-["●]"];
} */


/* Prevent selecting <br /> on copy-paste */
.copyWithoutLinebreaks br {
	@apply select-none;
}


[data-theme='cerberus'] {
	--heading-font-family: 'Junicode', 'Open Sans', sans-serif;
	--base-font-family: 'Junicode', 'Open Sans', sans-serif;
	--anchor-font-family: 'inherit';
}

